name:                 ModML-PhysicalConstants
version:              0.0.1
cabal-version:        >= 1.6
license:              BSD3
build-type:           Simple
copyright:            Andrew Miller
author:               Andrew Miller
maintainer:           Andrew Miller <ak.miller@auckland.ac.nz>
stability:            experimental
synopsis:             A mathematical modelling DSL built on functional transformations
description:          A mathematical modelling DSL built on functional transformations

library
  hs-source-dirs:       .
  exposed-modules:
    ModML.PhysicalConstants.CommonConstants
  build-depends: base ==4.*,
                 modml-core == 0.0.*,
                 modml-units == 0.0.*
